Migrated projects to Ganache LocalServer

--- a/UI/html/admin_ls.html
+++ b/UI/html/admin_ls.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="./css/admin_ls.css">
+    <link rel="stylesheet" href="../css/admin_login.css">
 </head>
 <body>
     <body>
@@ -11,7 +11,7 @@
                 <form id="registerForm">
                     <h1>Admin Registeration</h1>
                     <input id="email" type="email" placeholder="Email" required/>
-                    <input id="password" type="password" placeholder="Password" maxlength="15" required />
+                    <input id="password" type="password" placeholder="Password"   maxlength="15" required />
                     <button>Register</button>
                 </form>
             </div>
@@ -37,6 +37,87 @@
         </body>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-<script src="../js/admin_ls.js"></script>
+<script src="../js/validate.js"></script> 
+<!-- <script src="../js/admin_ls.js"></script> -->
 <script src="../js/swipe.js"></script>
+<script type="application/json" id="data" src="../../build/contracts/Authentication.json"></script>
+<script>
+        if (window.ethereum) {
+            window.web3 = new Web3(window.ethereum);
+            window.ethereum.enable();
+        } else {
+            alert("Please install MetaMask to use this dApp!");
+        }
+const contractAddress = '0xAC4377A594A89a1eA5bBebd75C7F4e2c97A41b8F'; // Replace with actual contract address
+
+async function loadjson(){
+    const res = await fetch('Authentication.json');
+    const json = await res.json();
+    const data = json.abi
+    // console.log(data)
+    return data
+}
+let ans = loadjson()
+
+        const abi = ans;
+        const contract = new web3.eth.Contract(abi, contractAddress);
+
+
+        // Function to handle admin registration
+        document.getElementById("registerForm").addEventListener("submit", async function(event) {
+            event.preventDefault(); // Prevent form submission
+
+            const email = document.getElementById("email").value;
+            const password = document.getElementById("password").value;
+
+			if (!validateEmail(email)) {
+				alert("Please enter a valid email address.");
+				return;
+			}
+	
+			if (!validatePassword(password)) {
+				alert("Please enter a password between 8 and 15 characters.");
+				return;
+			}
+            try {
+                await contract.methods.registerAdmin(email, password).send({ from: window.ethereum.selectedAddress });
+                alert("Admin registered successfully!");
+                window.location.href = "admin_homepage.html";
+            } catch (error) {
+                console.error(error);
+                alert("Failed to register admin!");
+            }
+        });
+
+
+        // Function to handle admin login
+        document.getElementById("loginForm").addEventListener("submit", async function(event) {
+            event.preventDefault(); // Prevent form submission
+
+            const email = document.getElementById("loginEmail").value;
+            const password = document.getElementById("loginPassword").value;
+
+			if (!validateEmail(email)) {
+				alert("Please enter a valid email address.");
+				return;
+			}
+	
+			if (!validatePassword(password)) {
+				alert("Please enter a password between 8 and 15 characters.");
+				return;
+			}
+			
+            try {
+                 await contract.methods.loginAdmin(email, password).call({ from: window.ethereum.selectedAddress});
+                 alert("Login successful!");
+                 window.location.href = "admin_homepage.html";
+
+                }
+            catch (error) {
+                console.error(error);
+                alert("Login failed. Please try again later.");
+            }
+        });
+
+</script>
 </html>
