--- a/UI/html/doctor_registeration.html
+++ b/UI/html/doctor_registeration.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="hospital_registeration.css">
+    <link rel="stylesheet" href="../css/hospital_registeration.css">
 </head>
 <body>
     <div id="feature-top">
@@ -20,11 +20,12 @@
             <label for="phone">Doctor Phone:</label>
             <input type="text" id="doctorPhNo" name="doctorPhNo" required>
             <label for="address">Password:</label>
-            <input type="text" id="doctorPass" name="doctorPass" required>
+            <input type="password" id="doctorPass" name="doctorPass" required>
             <button type="submit">Submit</button>
         </form>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
-<script src="doctor_registeration.js"></script>
+<script src="../js/validate.js"></script>
+<script src="../js/doctor_registeration.js"></script>
 </html>
