--- a/UI/html/hospital_homepage.html
+++ b/UI/html/hospital_homepage.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="admin_homepage.css">
+    <link rel="stylesheet" href="../css/admin_homepage.css">
 </head>
 <body>
     <div id="feature-top">
@@ -22,8 +22,8 @@
     </div>
     <div class="feature-box">
         <i class="ri-stethoscope-fill"></i>
-        <h3>View Patient Details</h3>
-        <a href="patient_homepage.html">Register Now</a>
+        <h3>Create Medical Record</h3>
+        <a href="medical_records.html">Register Now</a>
     </div>
 </div>
 </body>
