--- a/UI/html/verify_hospital.html
+++ b/UI/html/verify_hospital.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="verify_patient.css">
+    <link rel="stylesheet" href="../css/verify_patient.css">
 </head>
 <body>
     <div>
@@ -20,4 +20,4 @@
     </div> 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
-<script src="verify_hospital.js"></script>
+<script src="../js/verify_hospital.js"></script>
