--- a/UI/html/admin_homepage.html
+++ b/UI/html/admin_homepage.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="admin_homepage.css">
+    <link rel="stylesheet" href="../css/admin_homepage.css">
 </head>
 <body>
     <div id="feature-top">
