--- a/UI/html/hospital_registeration.html
+++ b/UI/html/hospital_registeration.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="hospital_registeration.css">
+    <link rel="stylesheet" href="../css/hospital_registeration.css">
 </head>
 <body>
     <div id="feature-top">
@@ -11,20 +11,21 @@
     </div>
     <div class="form-container">
         <form id="registerForm">
-            <label for="name">Hospital Id:</label>
+            <label >Hospital Id:</label>
             <input type="text" id="hospitalId" name="hospitalId" required>
-            <label for="email">Hospital Name:</label>
+            <label >Hospital Name:</label>
             <input type="text" id="hospitalName" name="hospitalName" required>
-            <label for="password">Hospital Address:</label>
+            <label >Hospital Address:</label>
             <input type="text" id="hospitalAddress" name="hospitalAddress" required>
-            <label for="phone">Hospital Specification:</label>
+            <label >Hospital Specification:</label>
             <input type="text" id="hospitalSpec" name="hospitalSpec" required>
-            <label for="address">Password:</label>
-            <input type="text" id="hospitalPass" name="hospitalPass" required>
+            <label >Password:</label>
+            <input type="password" id="hospitalPass" name="hospitalPass" required>
             <button type="submit">Submit</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <script src="hospital_registeration.js" defer></script>
+    <script src="../js/validate.js"></script> 
+    <script src="../js/hospital_registeration.js" defer></script>
 </body>
 </html>
