--- a/UI/html/medical_records.html
+++ b/UI/html/medical_records.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="hospital_registeration.css">
+    <link rel="stylesheet" href="../css/hospital_registeration.css">
 </head>
 <body>
     <div id="feature-top">
@@ -40,6 +40,7 @@
     
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <script src="medical_records.js" defer></script>
+    <script src="../js/validate.js"></script>
+    <script src="../js/medical_records.js" defer></script>
 </body>
 </html>
