--- a/UI/html/patient_registeration.html
+++ b/UI/html/patient_registeration.html
@@ -3,7 +3,7 @@
 <head>
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="hospital_registeration.css">
+    <link rel="stylesheet" href="../css/hospital_registeration.css">
 </head>
 <body>
     <div id="feature-top">
@@ -22,21 +22,17 @@
             <label for="patientAddress">Address:</label>
             <input type="text" id="patientAddress" name="patientAddress" required>
             <label for="phoneNo">Phone Number:</label>
-            <input type="number" id="phoneNo" name="phoneNo" required>
+            <input type="text" id="phoneNo" name="phoneNo" required>
             <label for="emailId">Email ID:</label>
             <input type="email" id="emailId" name="emailId" required>
             <label for="date">Date:</label>
             <input type="date" id="date" name="date" required>
-            <label for="attendantName">Attendant Name:</label>
-            <input type="text" id="attendantName" name="attendantName" required>
-            <label for="attendantRelation">Relation:</label>
-            <input type="text" id="attendantRelation" name="attendantRelation" required>
-            <label for="attendantPhnNo">Attendant Phone Number:</label>
-            <input type="text" id="attendantPhnNo" name="attendantPhnNo" required>
             <button type="submit">Submit</button>
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
-    <script src="patient_registeration.js" defer></script>
+    <script src="../js/validate.js"></script>
+    <script src="../js/patient_registeration.js" defer></script>
+
 </body>
 </html>
