--- a/UI/html/verify_patient.html
+++ b/UI/html/verify_patient.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Details Form</title>
-    <link rel="stylesheet" href="verify_patient.css">
+    <link rel="stylesheet" href="../css/verify_patient.css">
 </head>
 <body>
     <div id="feature-top">
@@ -57,5 +57,5 @@
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/web3@1.2.8/dist/web3.js"></script>
-<script src="verify_patient.js"></script>
+<script src="../js/verify_patient.js"></script>
 </html>
