Did some code reviews

--- a/UI/html/admin_ls.html
+++ b/UI/html/admin_ls.html
@@ -38,7 +38,7 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
 <script src="../js/validate.js"></script> 
-<!-- <script src="../js/admin_ls.js"></script> -->
+<script src="../js/admin_ls2.js"></script>
 <script src="../js/swipe.js"></script>
 <script type="application/json" id="data" src="../../build/contracts/Authentication.json"></script>
 <script>
